Drag and drop added & table overflow fix!

--- a/src/custom.css
+++ b/src/custom.css
@@ -1,9 +1,3 @@
-/* .form-control {
-	padding: 1rem 1rem;
-	 width: 80vw; 
-	 height: 60vh;
-} */
-
 .button {
 	width: 80vw;
 }
@@ -23,6 +17,19 @@
 .custom-select {
 	width: 10vw;
 	/* border-color: yellowgreen; */
+}
+
+td {
+	/* max-width: 80%; */
+	/* overflow: hidden hidden; */
+	/* text-overflow: clip;s */
+	/* white-space: normal; */
+	/* word-wrap: break-word; */
+	word-break: break-all;
+}
+
+table {
+	max-width: 100%;
 }
 
 .padded {
